<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGris"
    tools:context="ca.csf.dfc.projsynth.scmnv.view.emailLogin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:textSize="40sp" />

    <AutoCompleteTextView
        android:id="@+id/Email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="32sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/Password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="32sp"
        android:layout_below="@+id/Email_field"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/btn_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorJaune"
        android:text="@string/action_sign_in"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/switchRememberMe"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp" />

    <Button
        style="?android:textAppearanceSmall"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorJaune"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_below="@+id/btn_connect"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <Button
        style="?android:textAppearanceLarge"
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorRouge"
        android:text="@string/action_quit"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:id="@+id/switchRememberMe"
        android:textSize="30sp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/txtMotPAsseOublier" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forgot_password"
        android:id="@+id/txtMotPAsseOublier"
        android:layout_below="@+id/Password_field"
        android:layout_alignEnd="@+id/Password_field"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorMenu"
        android:clickable="true"
        android:textAlignment="center" />

</RelativeLayout>
