<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.inscription">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/str_inscription"
        android:id="@+id/textViewInscription"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prompt_email"
        android:id="@+id/textViewCourriel"
        android:layout_below="@+id/textViewInscription"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextCourriel"
        android:hint="@string/enter_email"
        android:layout_below="@+id/textViewCourriel"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/editTextPassword1"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/prompt_password"
        android:id="@+id/textViewPassword1"
        android:layout_below="@+id/editTextCourriel"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword1"
        android:layout_below="@+id/textViewPassword1"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/confirm_pass"
        android:id="@+id/textViewPassword2"
        android:labelFor="@+id/editTextPassword2"
        android:layout_below="@+id/editTextPassword1"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword2"
        android:layout_below="@+id/textViewPassword2"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_centerHorizontal="true"
        android:textSize="10sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:background="#FFE665"
        android:id="@+id/btnInsription"
        android:layout_below="@+id/editTextPassword2"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:height="50dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:background="#FFE665"
        android:id="@+id/btnConnecter"
        android:layout_below="@+id/btnInsription"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:height="40dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_quit"
        android:background="#CC0000"
        android:id="@+id/btnQuiter"
        android:layout_below="@+id/btnConnecter"
        android:textAlignment="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:height="40dp"/>

</RelativeLayout>
