<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorGris"
    android:orientation="vertical"
    tools:context=".view.resultat">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:columnCount="4"
        android:rowCount="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/results"
            android:id="@+id/txtResult"
            android:textSize="42sp"
            android:textColor="@color/colorNoir"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:id="@+id/np_Courant"
            android:theme="@style/AppTheme.Picker"
            android:background="@color/colorGris"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="/"
            android:id="@+id/txt_slash"
            android:textSize="42sp"
            android:textColor="@color/colorNoir"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/txt_Resultat_Total"
            android:textSize="42sp"
            android:textColor="@color/colorNoir"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="1"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btn_Back"
            android:textSize="42sp"
            android:background="@color/colorBleu"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_next"
            android:id="@+id/btn_Next"
            android:textSize="42sp"
            android:background="@color/colorBleu"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:rowCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/txt_Formule"
            android:textSize="42sp"
            android:maxLines="2"
            android:lines="2"
            android:text="@string/txtFormule"
            android:textColor="@color/colorNoir"
            android:background="@color/colorTitle"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/complex"
            android:id="@+id/txt_complex"
            android:textSize="25sp"
            android:textColor="@color/colorNoir"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/txt_ValueComplex"
            android:textSize="25sp"
            android:textColor="@color/colorNoir" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="1"
        android:rowCount="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen"
            android:id="@+id/btn_Ecouter"
            android:textSize="42sp"
            android:clickable="false"
            android:background="@color/colorJaune"
            android:textColor="@color/colorNoir" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeconnexion"
            android:id="@+id/btn_Deconnexion"
            android:background="@color/colorRouge"
            android:textSize="30sp" />
    </GridLayout>

</LinearLayout>
